.metadata/.plugins/org.eclipse.cdt.ui/ArduinoCore.build.log
23:08:24 **** Incremental Build of configuration Sasqatch for project ArduinoCore ****
make all 
Building file: ../src/HardwareSerial.cpp
Invoking: AVR C++ Compiler
avr-g++ -I"/home/mark/wokspace_c/Arduino-Blink-Eclipse-Project/ArduinoCore/src" -w -Os -ffunction-sections -fdata-sections -fno-exceptions -DARDUINO=22 -g -mmcu=atmega16 -DF_CPU=1000000UL -MMD -MP -MF"src/HardwareSerial.d" -MT"src/HardwareSerial.d" -c -o "src/HardwareSerial.o" "../src/HardwareSerial.cpp"
../src/HardwareSerial.cpp:93:11: error: attempt to use poisoned "SIG_UART_RECV"
  !defined(SIG_UART_RECV)
           ^
../src/HardwareSerial.cpp:94:4: error: #error "Don't know what the Data Received vector is called for the first UART"
   #error "Don't know what the Data Received vector is called for the first UART"
    ^
make: *** [src/HardwareSerial.o] Fehler 1

23:08:24 Build Finished (took 195ms)

